<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/current_date_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/date_time"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/weather_icon"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/temperature_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/temperature"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/temperature_v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/temperature"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/country_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/country_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/country_v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/country_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/city_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/city_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/city_v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/city_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/sunrise_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/sunrise"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/sunrise_v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/sunrise"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/sunset_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/sunset"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/sunset_v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/sunset"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />
            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
</layout>